using get/set for lastRevisionNumber and baseSvnUrl in the class. Fixed case sensitivity in "svn info" result. fixed modified files list wrapping.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -255,6 +255,8 @@ nav #connection-dialog-url {
 .cell-value-wrapper {
 	line-height: 30px;
 	padding: 0 5px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 .modified-file-path {
 	color: #666;
